[package]
name = "cw-merkle-tree"
version = "0.3.0"
edition = "2021"
description = "Sparse merkle tree with variants implementation for CosmWasm smart contract"
repository = "https://github.com/y-pakorn/cw-merkle-tree"
authors = ["yoisha <48324733+y-pakorn@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[dependencies]
cosmwasm-std = "1.2.5"
cw-storage-plus = "1.0.1"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
blake2 = { version = "0.10.4", defeault-features = false }
